<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenuActivity">

    <Button
            android:text="Game Rules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/game_rules_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" />

    <Button
            android:text="New Game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_game_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/game_rules_button"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />

    <ImageView
            android:layout_width="335dp"
            android:layout_height="508dp"
            app:srcCompat="@drawable/crocodile"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
