...
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/game_theme_select_recycler_view"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/game_theme_select_back_button"
            android:layout_marginBottom="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
...
