...

    <Button
            android:text="Start Turn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mid_turn_start_turn_button"
            app:layout_constraintBottom_toTopOf="@+id/mid_turn_stop_game_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
...
