...
            android:layout_marginStart="8dp" />

    <Button
            android:text="Start Game!"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/game_settings_start_game_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/game_settings_back_button" />

...
